Use non-prefixed -inline stylings

--- a/src/chrome/abouthome/abouthome.css
+++ b/src/chrome/abouthome/abouthome.css
@@ -56,7 +56,7 @@ a {
   display: -moz-box;
   -moz-box-align: center;
   padding-top: 2px;
-  -moz-padding-end: 8px;
+  padding-inline-end: 8px;
 }
 
 #searchLogoContainer[hidden] {
@@ -91,7 +91,7 @@ a {
 }
 
 #searchSubmit {
-  -moz-margin-start: -1px;
+  margin-inline-start: -1px;
   padding: 0 9px;
   color: #fff;
   background-color: rgb(60, 60, 60);
@@ -234,7 +234,7 @@ body[narrow] #restorePreviousSession {
   display: inline-block; /* display on same line as text label */
   vertical-align: middle;
   margin-bottom: 0;
-  -moz-margin-end: 8px;
+  margin-inline-end: 8px;
 }
 
 #restorePreviousSession:-moz-dir(rtl)::before {
