--- a/src/chrome/browser/aboutCertError.css
+++ b/src/chrome/browser/aboutCertError.css
@@ -32,7 +32,7 @@ h2 {
   border: 1px solid #FFBD09; /* pale yellow extracted from yellow passport icon */
   border-radius: 10px;
   padding: 3em;
-  -moz-padding-start: 30px;
+  padding-inline-start: 30px;
   background: url("chrome://global/skin/icons/sslWarning.png") left 0 no-repeat rgb(50, 50, 50);
   background-origin: content-box;
 }
@@ -42,16 +42,16 @@ h2 {
 }
 
 #errorTitle {
-  -moz-margin-start: 80px;
+  margin-inline-start: 80px;
 }
 
 #errorLongContent {
-  -moz-margin-start: 80px;
+  margin-inline-start: 80px;
 }
 
 .expander > button {
-  -moz-padding-start: 20px;
-  -moz-margin-start: -20px;
+  padding-inline-start: 20px;
+  margin-inline-start: -20px;
   background: url("chrome://browser/skin/aboutCertError_sectionExpanded.png") left center no-repeat;
   border: none;
   font: inherit;
