--- a/src/chrome/browser/permissions/aboutPermissions.css
+++ b/src/chrome/browser/permissions/aboutPermissions.css
@@ -41,7 +41,7 @@
 .site-favicon {
   height: 16px;
   width: 16px;
-  -moz-margin-end: 4px;
+  margin-inline-end: 4px;
   list-style-image: url("chrome://mozapps/skin/places/defaultFavicon.png");
 }
 
@@ -58,7 +58,7 @@
 
 #site-description {
   font-size: 125%;
-  -moz-margin-start: 6px; /* to match button margin */
+  margin-inline-start: 6px; /* to match button margin */
 }
 
 #site-label {
@@ -70,7 +70,7 @@
 #defaults-description {
   font-size: 125%;
   font-weight: bold;
-  -moz-margin-start: 6px;
+  margin-inline-start: 6px;
 }
 
 .pref-item {
@@ -80,7 +80,7 @@
 .pref-icon {
   width: 48px;
   height: 48px;
-  -moz-margin-end: 10px;
+  margin-inline-end: 10px;
 }
 
 .pref-icon[type="password"] {
