--- a/src/chrome/global/datetimepicker.css
+++ b/src/chrome/global/datetimepicker.css
@@ -20,11 +20,11 @@ datepicker, timepicker {
 .datetimepicker-input-box {
   -moz-appearance: none;
   cursor: text;
-  -moz-margin-end: 2px;
+  margin-inline-end: 2px;
   border: 1px solid rgb(50,50,50);
   padding: 2px 0 3px 0;
-  -moz-padding-start: 4px;
-  -moz-padding-end: 2px;
+  padding-inline-start: 4px;
+  padding-inline-end: 2px;
   background-color: rgb(75,75,75);
   color: #fff;
 }
