--- a/src/chrome/global/netError.css
+++ b/src/chrome/global/netError.css
@@ -26,7 +26,7 @@ h1 {
 
 ul, ol {
   margin: 0;
-  -moz-margin-start: 1.5em;
+  margin-inline-start: 1.5em;
   padding: 0;
 }
 
@@ -46,7 +46,7 @@ ul {
   border: 1px solid rgb(50,50,50);
   border-radius: 10px;
   padding: 3em;
-  -moz-padding-start: 30px;
+  padding-inline-start: 30px;
   background: url("chrome://global/skin/icons/warning-large.png") left 0 no-repeat  rgb(43,43,43);
   background-origin: content-box;
 }
@@ -60,11 +60,11 @@ body[dir="rtl"] #errorPageContainer {
 }
 
 #errorTitle {
-  -moz-margin-start: 80px;
+  margin-inline-start: 80px;
 }
 
 #errorLongContent {
-  -moz-margin-start: 80px;
+  margin-inline-start: 80px;
 }
 
 #errorShortDesc > p {
@@ -76,7 +76,7 @@ body[dir="rtl"] #errorPageContainer {
 }
 
 #errorLongDesc {
-  -moz-padding-end: 3em;
+  padding-inline-end: 3em;
   font-size: 110%;
 }
 
@@ -85,14 +85,14 @@ body[dir="rtl"] #errorPageContainer {
 
 #errorTryAgain {
   margin-top: 2em;
-  -moz-margin-start: 80px;
+  margin-inline-start: 80px;
 }
 
 #brand {
   position: absolute;
   right: 0;
   bottom: -1.5em;
-  -moz-margin-end: 10px;
+  margin-inline-end: 10px;
   opacity: .4;
 }
 
