--- a/src/chrome/mozapps/downloads/downloads.css
+++ b/src/chrome/mozapps/downloads/downloads.css
@@ -127,12 +127,12 @@ windowdragbox {
 }
 
 #clearListButton {
-  -moz-margin-start: 0;
+  margin-inline-start: 0;
   margin-bottom: 0;
 }
 
 #searchbox {
-  -moz-margin-end: 0;
+  margin-inline-end: 0;
   margin-bottom: 0;
   background-color: rgb(50,50,50);
   border-radius: 5px;
