--- a/src/chrome/mozapps/extensions/extensions.css
+++ b/src/chrome/mozapps/extensions/extensions.css
@@ -9,7 +9,7 @@
 @import url("chrome://global/skin/inContentUI.css");
 
 #forward-btn {
-  -moz-border-start: none;
+  border-inline-start: none;
 }
 
 #back-btn:-moz-locale-dir(ltr),
@@ -138,7 +138,7 @@
 #categories {
   -moz-appearance: none;
   border: none;
-  -moz-margin-end: -1px;
+  margin-inline-end: -1px;
   background-color: transparent;
   position: relative;
   margin-top: 31px;
@@ -186,7 +186,7 @@
   background-color: rgb(110,110,110);
   color: #fff;
   border-color: rgb(50,50,50);
-  -moz-border-end-color: rgb(75,75,75);
+  border-inline-end-color: rgb(75,75,75);
 }
 
 .category-name {
@@ -217,7 +217,7 @@
 .category-icon {
   width: 32px;
   height: 32px;
-  -moz-margin-start: 6px;
+  margin-inline-start: 6px;
 }
 
 #category-search > .category-icon {
@@ -287,7 +287,7 @@
 
 #header-utils-btn {
   list-style-image: url("chrome://browser/skin/toolbar/menu.svg");
-  -moz-margin-end: 16px;
+  margin-inline-end: 16px;
 }
 
 .view-header {
@@ -329,7 +329,7 @@
 }
 
 .sorter .button-icon {
-  -moz-margin-start: 4px;
+  margin-inline-start: 4px;
 }
 
 
@@ -347,7 +347,7 @@
 
 .discover-logo {
   list-style-image: url("chrome://mozapps/skin/extensions/discover-logo.png");
-  -moz-margin-end: 15px;
+  margin-inline-end: 15px;
 }
 
 .discover-title {
@@ -391,7 +391,7 @@
 .details {
   cursor: pointer;
   margin: 0;
-  -moz-margin-start: 10px;
+  margin-inline-start: 10px;
 }
 
 .icon-container {
@@ -451,7 +451,7 @@
 }
 
 .description-container {
-  -moz-margin-start: 6px;
+  margin-inline-start: 6px;
   -moz-box-align: center;
 }
 
@@ -462,7 +462,7 @@
 .warning,
 .pending,
 .error {
-  -moz-margin-start: 48px;
+  margin-inline-start: 48px;
   font-weight: bold;
   -moz-box-align: center;
 }
@@ -523,7 +523,7 @@
 
 .addon .relnotes-container {
   -moz-box-align: start;
-  -moz-margin-start: 6px;
+  margin-inline-start: 6px;
   height: 0;
   overflow: hidden;
   opacity: 0;
@@ -553,7 +553,7 @@
 }
 
 .addon .relnotes-toggle > .button-box > .button-icon {
-  -moz-padding-start: 4px;
+  padding-inline-start: 4px;
 }
 
 .addon[show-relnotes] .relnotes-toggle {
@@ -690,12 +690,12 @@
 #detail-notifications .warning,
 #detail-notifications .pending,
 #detail-notifications .error {
-  -moz-margin-start: 0;
+  margin-inline-start: 0;
 }
 
 #detail-icon-container {
   width: 64px;
-  -moz-margin-end: 10px;
+  margin-inline-end: 10px;
   margin-top: 6px;
 }
 
@@ -713,7 +713,7 @@
 }
 
 #detail-screenshot {
-  -moz-margin-end: 2em;
+  margin-inline-end: 2em;
   max-width: 300px;
   max-height: 300px;
 }
@@ -736,7 +736,7 @@
 }
 
 #detail-desc, #detail-fulldesc {
-  -moz-margin-start: 6px;
+  margin-inline-start: 6px;
   /* This is necessary to fix layout issues with multi-line descriptions, see
      bug 592712*/
   outline: solid transparent;
@@ -782,7 +782,7 @@
 }
 
 #detail-contrib-btn .button-icon {
-  -moz-margin-end: 3px;
+  margin-inline-end: 3px;
 }
 
 #detail-contrib-btn:not(:active):hover {
@@ -846,7 +846,7 @@ setting {
   font-size: 90.9%;
   color: graytext;
   margin-top: -2px;
-  -moz-margin-start: 2em;
+  margin-inline-start: 2em;
   white-space: pre-wrap;
 }
 
@@ -865,8 +865,8 @@ menulist { /* Fixes some styling inconsistencies */
 /*** creator ***/
 
 .creator > label {
-  -moz-margin-start: 0;
-  -moz-margin-end: 0;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
 }
 
 .creator > .text-link {
@@ -878,7 +878,7 @@ menulist { /* Fixes some styling inconsistencies */
 /*** rating ***/
 
 .meta-rating {
-  -moz-margin-end: 0;
+  margin-inline-end: 0;
   padding-top: 2px;
 }
 
@@ -930,13 +930,13 @@ menulist { /* Fixes some styling inconsistencies */
 }
 
 .download-progress .start-cap {
-  -moz-margin-start: -1px;
-  -moz-border-end-width: 0;
+  margin-inline-start: -1px;
+  border-inline-end-width: 0;
 }
 
 .download-progress .end-cap {
-  -moz-margin-end: -1px;
-  -moz-border-start-width: 0px !important;
+  margin-inline-end: -1px;
+  border-inline-start-width: 0px !important;
 }
 
 .download-progress .progress .progress-bar  {
@@ -997,7 +997,7 @@ menulist { /* Fixes some styling inconsistencies */
 }
 
 .download-progress .cancel .button-icon {
-  -moz-margin-start: 0;
+  margin-inline-start: 0;
 }
 
 .download-progress .cancel {
