--- a/src/chrome/os/darwin/toolbarbutton.css
+++ b/src/chrome/os/darwin/toolbarbutton.css
@@ -39,14 +39,14 @@ toolbarbutton[disabled="true"][open="true"] {
   background-color: transparent !important;
   list-style-image: url("chrome://global/skin/arrow/arrow-v.svg#dn");
   padding: 0;
-  -moz-padding-start: 2px;
+  padding-inline-start: 2px;
   width: auto;
 }
 
 .toolbarbutton-menu-dropmarker[disabled="true"] {
   list-style-image: url("chrome://global/skin/arrow/arrow-v.svg#dn-dis");
   padding: 0;
-  -moz-padding-start: 2px;
+  padding-inline-start: 2px;
 }
 
 /* ::::: toolbarbutton menu-button ::::: */
