--- a/src/chrome/browser/places/places.css
+++ b/src/chrome/browser/places/places.css
@@ -141,5 +141,5 @@ treechildren::-moz-tree-cell-text(selected, focus) {
 #viewButton > .button-box > .button-menu-dropmarker {
   height: auto;
   width: auto;
-  -moz-margin-end: -3px;
+  margin-inline-end: -3px;
 }
