--- a/src/chrome/global/about.css
+++ b/src/chrome/global/about.css
@@ -13,7 +13,7 @@ body {
   border: 1px solid rgb(50,50,50);
   border-radius: 10px;
   padding: 3em;
-  -moz-padding-start: 30px;
+  padding-inline-start: 30px;
   background: rgb(43,43,43);
 }
 
@@ -33,7 +33,7 @@ img {
 
 ul {
   margin: 0;
-  -moz-margin-start: 1.5em;
+  margin-inline-start: 1.5em;
   padding: 0;
   list-style: square;
 }
