--- a/src/chrome/global/dialog.css
+++ b/src/chrome/global/dialog.css
@@ -13,8 +13,8 @@
 dialog { 
   padding-top: 8px;
   padding-bottom: 10px;
-  -moz-padding-start: 8px;
-  -moz-padding-end: 10px;
+  padding-inline-start: 8px;
+  padding-inline-end: 10px;
 }
 
 /* ::::: dialog buttons ::::: */
@@ -46,16 +46,16 @@ dialogheader {
   -moz-box-orient: vertical;
   margin-top: -8px;
   margin-bottom: 0;
-  -moz-margin-start: -8px;
-  -moz-margin-end: -10px;
+  margin-inline-start: -8px;
+  margin-inline-end: -10px;
   border-left: none;
   border-right: none;
   border-top: none;
   border-bottom-color: rgb(50,50,50);
   padding-top: 12px;
   padding-bottom: 12px;
-  -moz-padding-start: 25px;
-  -moz-padding-end: 5px;
+  padding-inline-start: 25px;
+  padding-inline-end: 5px;
   background-color: rgb(43,43,43);
   color: #fff;
 }
@@ -66,5 +66,5 @@ dialogheader {
 }
 
 .header-large > .dialogheader-description {
-  -moz-margin-start: 12px !important;
+  margin-inline-start: 12px !important;
 }
