--- a/src/chrome/global/dropmarker.css
+++ b/src/chrome/global/dropmarker.css
@@ -22,8 +22,8 @@ dropmarker:hover:active:not([disabled="true"]) {
   background-color: rgb(110,110,110);
   padding-top: 2px;
   padding-bottom: 0px;
-  -moz-padding-start: 2px;
-  -moz-padding-end: 0px;
+  padding-inline-start: 2px;
+  padding-inline-end: 0px;
   padding-inline-start: 2px;
   padding-inline-end: 0px;
 }
