--- a/src/chrome/global/findBar.css
+++ b/src/chrome/global/findBar.css
@@ -30,7 +30,7 @@ findbar[hidden] {
 }
 
 .findbar-container {
-  -moz-padding-start: 0px;
+  padding-inline-start: 0px;
   padding-top: 0px;
   padding-bottom: 0px;
 }
@@ -86,7 +86,7 @@ findbar[hidden] {
   border: 1px solid rgb(75,75,75);
   list-style-image: url("chrome://global/skin/icons/find-arrows.png");
   padding: 2px 6px;
-  -moz-margin-start: 0;
+  margin-inline-start: 0;
   margin-left: 3px;
   border-radius: 3px;
 }
@@ -102,7 +102,7 @@ findbar[hidden] {
 
 .findbar-find-next {
   -moz-image-region: rect(0, 20px, 9px, 10px);
-  -moz-padding-end: 6px;
+  padding-inline-end: 6px;
 }
 
 .findbar-find-previous > .toolbarbutton-icon,
@@ -134,7 +134,7 @@ findbar[hidden] {
 
 .findbar-highlight,
 .findbar-case-sensitive {
-  -moz-margin-start: 5px;
+  margin-inline-start: 5px;
   border-radius: 5px;
 }
 
@@ -146,7 +146,7 @@ findbar[hidden] {
 .findbar-find-status {
   color: GrayText;
   margin: 0 !important;
-  -moz-margin-start: 12px !important;
+  margin-inline-start: 12px !important;
 }
 
 .find-status-icon[status="pending"] {
