--- a/src/chrome/global/notification.css
+++ b/src/chrome/global/notification.css
@@ -28,8 +28,8 @@ notification[type="critical"] {
 .messageImage {
   width: 16px;
   height: 16px;
-  -moz-margin-start: 6px;
-  -moz-margin-end: 1px;
+  margin-inline-start: 6px;
+  margin-inline-end: 1px;
 }
 
 /* Default icons for notifications */
@@ -53,7 +53,7 @@ notification[type="critical"] {
 }
 
 .messageCloseButton > .toolbarbutton-icon {
-  -moz-margin-end: 5px;
+  margin-inline-end: 5px;
 }
 
 /* Popup notification */
@@ -96,13 +96,13 @@ notification[type="critical"] {
 .popup-notification-menubutton > .button-menubutton-button {
   background-color: transparent;
   padding: 1px;
-  -moz-border-end: none;
+  border-inline-end: none;
 }
 
 .popup-notification-menubutton:not([type="menu-button"]),
 .popup-notification-menubutton > .button-menubutton-button > .button-box {
-  -moz-padding-start: 8px;
-  -moz-padding-end: 5px;
+  padding-inline-start: 8px;
+  padding-inline-end: 5px;
 }
 
 .popup-notification-menubutton > .button-menubutton-dropmarker {
@@ -145,6 +145,6 @@ notification[type="critical"] {
 }
 
 .popup-notification-closebutton {
-  -moz-margin-end: -14px;
+  margin-inline-end: -14px;
   margin-top: -10px;
 }
