--- a/src/chrome/global/preferences.css
+++ b/src/chrome/global/preferences.css
@@ -17,15 +17,15 @@ prefwindow {
 prefpane {
   padding-top: 8px;
   padding-bottom: 10px;
-  -moz-padding-start: 8px;
-  -moz-padding-end: 10px;
+  padding-inline-start: 8px;
+  padding-inline-end: 10px;
 }
 
 prefwindow[type="child"] {
   padding-top: 8px;
   padding-bottom: 10px;
-  -moz-padding-start: 8px;
-  -moz-padding-end: 10px;
+  padding-inline-start: 8px;
+  padding-inline-end: 10px;
 }
 
 prefwindow[type="child"] > prefpane {
@@ -34,8 +34,8 @@ prefwindow[type="child"] > prefpane {
 
 .prefWindow-dlgbuttons {
   padding-bottom: 10px;
-  -moz-padding-start: 8px;
-  -moz-padding-end: 10px;
+  padding-inline-start: 8px;
+  padding-inline-end: 10px;
 }
 
 prefwindow[type="child"] .prefWindow-dlgbuttons {
@@ -52,7 +52,7 @@ radio[pane] {
 .paneSelector {
   border-bottom: 1px solid rgb(75,75,75);
   margin: 0px;
-  -moz-padding-start: 10px;
+  padding-inline-start: 10px;
   background-color: rgb(43,43,43);
   color: #fff;
 }
