--- a/src/chrome/global/textbox.css
+++ b/src/chrome/global/textbox.css
@@ -21,7 +21,7 @@ textbox {
   margin: 2px 4px;
   border: 1px solid rgb(50,50,50);
   padding: 2px 2px 3px;
-  -moz-padding-start: 4px;
+  padding-inline-start: 4px;
   background-color: rgb(75,75,75);
   color: #fff;
 }
