--- a/src/chrome/global/tree.css
+++ b/src/chrome/global/tree.css
@@ -174,7 +174,7 @@ treechildren::-moz-tree-drop-feedback {
   background-color: rgb(110,110,110);
   width: 50px;
   height: 2px;
-  -moz-margin-start: 5px;
+  margin-inline-start: 5px;
 }
 
 /* ::::: tree progress meter ::::: */
@@ -250,11 +250,11 @@ treecol[insertbefore="true"]:-moz-locale-dir(ltr) {
 }
 
 treechildren::-moz-tree-column(insertbefore) {
-  -moz-border-start: 1px solid ThreeDShadow;
+  border-inline-start: 1px solid ThreeDShadow;
 }
 
 treechildren::-moz-tree-column(insertafter) {
-  -moz-border-end: 1px solid ThreeDShadow;
+  border-inline-end: 1px solid ThreeDShadow;
 }
 
 /* ::::: sort direction indicator :::::  */
@@ -288,7 +288,7 @@ treecol:not([hideheader="true"]) > .treecol-sortdirection[sortDirection="descend
 /* ::::: twisty :::::  */
 
 treechildren::-moz-tree-twisty {
-  -moz-padding-end: 4px;
+  padding-inline-end: 4px;
   padding-top: 1px;
   width: 9px; /* The image's width is 9 pixels */
   list-style-image: url("chrome://global/skin/tree/twisty.svg#clsd");
@@ -332,7 +332,7 @@ treechildren::-moz-tree-cell-text(selected, editing) {
   -moz-border-left-colors: Highlight;
   -moz-border-right-colors: Highlight;
   margin: 0;
-  -moz-margin-start: -4px;
+  margin-inline-start: -4px;
   padding: 1px;
 }
 
@@ -343,7 +343,7 @@ treechildren::-moz-tree-indentation {
 }
 
 treechildren::-moz-tree-twisty {
-  -moz-padding-end: 1px;
+  padding-inline-end: 1px;
   width: 9px;
 }
 
