--- a/src/chrome/mozapps/aboutServiceWorkers.css
+++ b/src/chrome/mozapps/aboutServiceWorkers.css
@@ -29,7 +29,7 @@ body {
   border: 1px solid rgb(50,50,50);
   border-radius: 10px;
   padding: 3em;
-  -moz-padding-start: 30px;
+  padding-inline-start: 30px;
   background: rgb(43,43,43);
   margin-left: auto;
   text-align: center;
