--- a/src/chrome/mozapps/extensions/about.css
+++ b/src/chrome/mozapps/extensions/about.css
@@ -23,7 +23,7 @@
   list-style-image: url("chrome://mozapps/skin/extensions/extensionGeneric.png");
   max-width: 64px;
   max-height: 64px;
-  -moz-margin-end: 6px;
+  margin-inline-end: 6px;
 }
 
 #genericAbout[addontype="theme"] #extensionIcon {
@@ -65,7 +65,7 @@
 }
 
 .boxIndent {
-  -moz-margin-start: 18px;
+  margin-inline-start: 18px;
 }
 
 #extensionCreator, .contributor {
