--- a/src/chrome/os/darwin/browser.css
+++ b/src/chrome/os/darwin/browser.css
@@ -96,7 +96,7 @@ toolbarbutton.bookmark-item {
 
 toolbarbutton.bookmark-item > menupopup {
   margin-top: 2px;
-  -moz-margin-start: 3px;
+  margin-inline-start: 3px;
 }
 
 .bookmark-item > .toolbarbutton-icon {
@@ -107,5 +107,5 @@ toolbarbutton.bookmark-item > menupopup {
 
 .bookmark-item > .toolbarbutton-icon[label]:not([label=""]),
 .bookmark-item > .toolbarbutton-icon[type="menu"] {
-  -moz-margin-end: 5px;
+  margin-inline-end: 5px;
 }
