--- a/src/chrome/os/darwin/menulist.css
+++ b/src/chrome/os/darwin/menulist.css
@@ -36,7 +36,7 @@ menulist:not([popuponly="true"]) {
 .menulist-description {
   font-style: italic;
   color: GrayText;
-  -moz-margin-start: 1ex !important;
+  margin-inline-start: 1ex !important;
 }
 
 menulist:hover:not(:active):not([disabled=true]) {
@@ -62,7 +62,7 @@ menulist[disabled="true"] {
 }
 
 menulist[disabled="true"] > .menulist-dropmarker {
-  -moz-padding-start: 7px !important;
+  padding-inline-start: 7px !important;
 }
 
 /* ::::: editable menulists ::::: */
