--- a/src/chrome/os/linux/menulist.css
+++ b/src/chrome/os/linux/menulist.css
@@ -56,7 +56,7 @@ menulist[disabled="true"]:hover:active {
 .menulist-description {
   font-style: italic;
   color: GrayText;
-  -moz-margin-start: 1ex !important;
+  margin-inline-start: 1ex !important;
 }
 
 /* ..... dropmarker ..... */
@@ -74,8 +74,8 @@ menulist[disabled="true"]:hover:active > .menulist-dropmarker {
 menulist:hover:active > .menulist-dropmarker {
   padding-top: 2px;
   padding-bottom: 0px;
-  -moz-padding-start: 2px;
-  -moz-padding-end: 0px;
+  padding-inline-start: 2px;
+  padding-inline-end: 0px;
 }
 
 /* ..... focused state ..... */
@@ -100,8 +100,8 @@ menulist[editable="true"] {
   -moz-appearance: none;
   padding-top: 3px;
   padding-bottom: 3px;
-  -moz-padding-start: 2px;
-  -moz-padding-end: 0px;
+  padding-inline-start: 2px;
+  padding-inline-end: 0px;
   color: #fff;
 }
 
