--- a/src/chrome/os/winnt/browser.css
+++ b/src/chrome/os/winnt/browser.css
@@ -63,7 +63,7 @@
   height: auto;
   padding: 0;
   margin: 0;
-  -moz-margin-start: .5em;
+  margin-inline-start: .5em;
 }
 
 #main-window[privatebrowsingmode=temporary] #appmenu-button > .button-box > .button-menu-dropmarker {
@@ -120,7 +120,7 @@
 
 @media not all and (-moz-windows-classic) {
   #titlebar-min {
-    -moz-margin-end: 2px;
+    margin-inline-end: 2px;
   }
 }
 
@@ -135,8 +135,8 @@ toolbarbutton.bookmark-item:hover:active:not([disabled="true"]),
 toolbarbutton.bookmark-item[open="true"] {
   padding-top: 3px;
   padding-bottom: 1px;
-  -moz-padding-start: 4px;
-  -moz-padding-end: 2px;
+  padding-inline-start: 4px;
+  padding-inline-end: 2px;
 }
 
 .bookmark-item:not(#bookmarks-menu-button) > .toolbarbutton-icon {
@@ -170,7 +170,7 @@ toolbarbutton.bookmark-item[open="true"] {
 
   #appmenu-popup {
     margin-top: -1px;
-    -moz-margin-start: 1px;
+    margin-inline-start: 1px;
   }
 }
 
@@ -182,11 +182,11 @@ toolbarbutton.bookmark-item[open="true"] {
 
   #sidebar-splitter {
     border: 0;
-    -moz-border-end: 1px solid rgb(75,75,75);
+    border-inline-end: 1px solid rgb(75,75,75);
     min-width: 0;
     width: 3px;
     background-color: transparent;
-    -moz-margin-start: -3px;
+    margin-inline-start: -3px;
     position: relative;
   }
 }
